[gd_scene load_steps=8 format=2]

[ext_resource path="res://DiceSprites/D6.png" type="Texture" id=1]
[ext_resource path="res://Scripts/DiceOption.gd" type="Script" id=2]
[ext_resource path="res://UI/my_theme.tres" type="Theme" id=3]
[ext_resource path="res://UI/Roboto-Black.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://UI/Plus.png" type="Texture" id=6]
[ext_resource path="res://UI/Minus.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 22
font_data = ExtResource( 4 )

[node name="ShortDiceOption" type="Panel"]
self_modulate = Color( 1, 1, 1, 0.388235 )
margin_right = 312.0
margin_bottom = 97.0
rect_min_size = Vector2( 312, 96 )
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DiceSprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )
centered = false

[node name="Num" type="Label" parent="."]
visible = false
self_modulate = Color( 0, 0, 0, 1 )
margin_left = -4.0
margin_top = 4.0
margin_right = 36.0
margin_bottom = 31.0
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 1 )
text = "6"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 2.0
margin_top = 1.0
margin_right = 265.0
margin_bottom = 92.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 263.0
margin_bottom = 21.0
text = "Devil's Knucklebone"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DiceValues" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 25.0
margin_right = 263.0
margin_bottom = 25.0

[node name="Available" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_bottom = 19.0
text = "8"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullButton" type="TextureButton" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
mouse_default_cursor_shape = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Plus" type="TextureButton" parent="."]
margin_left = 280.0
margin_top = 1.0
margin_right = 296.0
margin_bottom = 17.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Minus" type="TextureButton" parent="."]
margin_left = 256.0
margin_top = 1.0
margin_right = 272.0
margin_bottom = 17.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="FullButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="Plus" to="." method="_on_Plus_pressed"]
[connection signal="pressed" from="Minus" to="." method="_on_Minus_pressed"]
